# dsait-4305-polymer-prediction

./: .gitignore  README.md  SMILE_to_Graph.ipynb  baselines.xlsx  main.py  pyproject.toml  queue.bat  requirements.txt  sparsity_check.py
conf/: config.yaml  experiment_example.yaml  sweep_egnn.yaml  sweep_gcn.yaml  sweep_hrg.yaml
conf/data/: 3d_conformers.yaml  default.yaml  fusion.yaml
conf/loss/: weighted_mae.yaml
conf/model/: egnn_multi.yaml  egnn_single.yaml  fusion.yaml  gat.yaml  gcn.yaml  hrg.yaml  mlp.yaml  mlp_no_pool.yaml  polybert.yaml
conf/optimizer/: adam.yaml
conf/preprocessing/: fusion.yaml  oligomer.yaml  polybert.yaml  rdkit_descriptors.yaml  text_based.yaml
conf/scheduler/: cosine_annealing.yaml  null.yaml
conf/ssl_model/: contrastive.yaml  node_mask.yaml
conf/trainer/: default.yaml
conf/wandb/: default.yaml
data/processed/: test_processed.pl
nbs/: eda.ipynb
notebooks/: Attention_Explainability.ipynb  gcn_explainability_fixed.ipynb
src/loss/: masked_loss.py
src/models/: egnn.py  fusion.py  gat.py  gcn.py  hrg.py  mlp.py  mp.py  polyBERT.py
src/models/explainability/: GNNExplainer.py  attention_based.py  zorro.py
src/preprocessing/: fusionpreprocess.py  non_covalent.py  oligomer.py  polyBERTpreprocess.py  preprocessing.py  rdkit_descriptors.py  text_based.py
src/ssl/: SSLModels.py  augmentations.py  loss.py  pretrain.py
src/utils/: running_mean.py
