[project]
name = "dsait-4305-polymer-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "lightning>=2.3.3",
    "networkx>=3.1",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "tensorboard>=2.14.0",
    "torch",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
